# LoRa-intrusion-detection-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
CAD_designs/: button_counterpart_v1-Body.stl  button_counterpart_v1.FCStd  button_mount_v5-Body.stl  button_mount_v5.FCStd  button_mount_v6-Body.stl  button_mount_v6.FCStd  door_open_button_mount_v1-Body.stl  door_open_button_mount_v1.FCStd  door_open_button_mount_v2-Body.stl  door_open_button_mount_v2.FCStd
app/: README.md  __init__.py
app/keys/: public_api_key.pem
app/migrations/: env.py
app/migrations/versions/: 301d45fa16fe_init2.py  7d531b7adbab_add_user.py  89c41257da19_remove_user.py  fb2b77c382e5_init.py
app/src/: config.py  errors.py
app/src/alarm/: routes.py  schemas.py  service.py
app/src/auth/: dependencies.py  utils.py
app/src/db/: main.py  models.py
backend/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 89c41257da19_remove_user.py
backend/src/: errors.py
backend/src/alarm/: routes.py  service.py
backend/src/auth/: dependencies.py  utils.py
backend/src/db/: main.py  models.py
raspberrypi/alarm_receiver/: alarm_handler.py  main.py  main2.py  main3.py  requirements.txt  test.py
raspberrypi/alarm_transmitter/: alarm_state.py  main.py  main2.py  requirements.txt
