[project]
name = "lora-intrusion-detection-system"
version = "0.1.0"
description = "LoRa Intrusion Detection System including a FastAPI backend and a telegram bot"
authors = ["Sören Erichsen <soeren.erichsen@gmx.de>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "cryptography>=44.0.0",
    "fastapi[standard]>=0.115.8",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "pygame>=2.6.1",
    "pyjwt>=2.10.1",
    "pyserial>=3.5",
    "python-dotenv>=1.0.1",
    "python-telegram-bot[job-queue]>=21.10",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]

[tool.ruff]
src = ["."]
exclude = ["venv"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true
disable_error_code = ["override", "attr-defined", "import", "empty-body"]
exclude = ["venv/", "test_.\\.py$"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]
